--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+target/
+*.iml
+
+#############################################
+## Original contents from github template: ##
+#############################################
 # Compiled class file
 *.class
 
