Update id & name of repository to match settings.xml

--- a/pom.xml
+++ b/pom.xml
@@ -122,16 +122,16 @@
 
    <repositories>
       <repository>
-        <id>github</id>
-        <name>GitHub kingsrook Maven Packages</name>
+        <id>github-qqq-maven-registry</id>
+        <name>GitHub QQQ Maven Registry</name>
         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
       </repository>
    </repositories>
 
    <distributionManagement>
       <repository>
-        <id>github</id>
-        <name>GitHub kingsrook Maven Packages</name>
+        <id>github-qqq-maven-registry</id>
+        <name>GitHub QQQ Maven Registry</name>
         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
       </repository>
    </distributionManagement>
