--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,8 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v20
       with:
-        repositories: '[{ "id": "github-qqq-maven-registry", "url": "https://maven.pkg.github.com/Kingsrook/qqq-maven-registry", "snapshots": { "enabled": "true" }}]'
-        servers: '[{ "id": "github-qqq-maven-registry", "username": "${env.QQQ_MAVEN_REGISTRY_USERNAME}", "password": "${env.QQQ_MAVEN_REGISTRY_PASSWORD}" }]'
+        repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/Kingsrook/qqq-maven-registry", "snapshots": { "enabled": "true" }}]'
+        servers: '[{ "id": "github", "username": "${env.QQQ_MAVEN_REGISTRY_USERNAME}", "password": "${env.QQQ_MAVEN_REGISTRY_PASSWORD}" }]'
     - name: Cat settings.xml
       run: cat /home/runner/.m2/settings.xml
     - name: Set up JDK 17
