--- a/pom.xml
+++ b/pom.xml
@@ -120,15 +120,13 @@
       </plugins>
    </build>
 
-<!--
    <repositories>
       <repository>
-        <id>github-qqq-maven-registry</id>
+        <id>github</id>
         <name>GitHub QQQ Maven Registry</name>
         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
       </repository>
    </repositories>
--->
 
 <!--
    <distributionManagement>
