--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,15 +24,10 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: maven
-    - name: maven-settings-action
-      uses: s4u/maven-settings-action@v2.4.1
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v20
       with:
-        githubServer: false
-        servers: |
-          [{
-            "id": "github",
-            "username": "${{ secrets.QQQ_MAVEN_REGISTRY_USERNAME }}",
-            "password": "${{ secrets.QQQ_MAVEN_REGISTRY_PASSWORD }}"
-          }]
+        repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/Kingsrook/qqq-maven-registry", "snapshots": { "enabled": "true" }}]'
+        servers: '[{ "id": "github", "username": "${{ secrets.QQQ_MAVEN_REGISTRY_USERNAME }}", "password": "${{ secrets.QQQ_MAVEN_REGISTRY_PASSWORD }}" }]'
     - name: Build with Maven
       run: mvn -B deploy --file pom.xml
