--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,19 @@
    <build>
       <plugins>
          <!-- plugins specifically for this module -->
-         <!-- none at this time -->
+         <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+               <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+               <archive>
+                  <manifest>
+                     <mainClass>com.kingsrook.qqq.frontend.picocli.QPicoCliImplementation</mainClass>
+                  </manifest>
+               </archive>
+            </configuration>
+         </plugin>
 
          <!-- Common plugins for all qqq modules -->
          <plugin>
