--- a/pom.xml
+++ b/pom.xml
@@ -130,20 +130,19 @@
       </plugins>
    </build>
 
-<!--
-   <distributionManagement>
-      <snapshotRepository>
-         <id>nexus-snapshots</id>
-         <url>http://localhost:8088/repository/maven-snapshots</url>
-      </snapshotRepository>
-   </distributionManagement>
--->
+   <repositories>
+      <repository>
+         <id>github</id>
+         <name>GitHub QQQ Maven Registry</name>
+         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
+      </repository>
+   </repositories>
 
    <distributionManagement>
       <repository>
-        <id>github</id>
-        <name>GitHub kingsrook Maven Packages</name>
-        <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
+         <id>github-qqq-maven-registry</id>
+         <name>GitHub QQQ Maven Registry</name>
+         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
       </repository>
    </distributionManagement>
 
