--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,14 @@ executors:
 orbs:
   maven: circleci/maven@1.3.0
 
-# Define a job to be invoked later in a workflow.
+workflows:
+  maven_test:
+    jobs:
+      - maven/test # checkout, build, test, and upload test results
+
+## I think this job won't run anymore, after I add a workflow.  Just leaving it here for reference, and to confirm that.
 jobs:
-  build:
+  shouldnt_run:
     executor: java17
     steps:
       # todo - ssh keys?
@@ -28,10 +33,15 @@ jobs:
             mkdir -p ~/test-results/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
           when: always
+      - store_test_results:
+          path: ~/test-results
       - persist_to_workspace:
           root: target
           paths:
-            - qqq-backend-core-*.jar          
+            - qqq-backend-core-*.jar
+      - store_artifacts:
+          path: target/qqq-backend-core-*.jar
+          destination: qqq-backend-core.jar
       - save_cache:
           paths:
             - ~/.m2
