--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,8 @@ executors:
 orbs:
   maven: circleci/maven@1.3.0
 
-workflows:
-  maven_test:
-    jobs:
-      - maven/test: # checkout, build, test, and upload test results
-          executor: java17
-
-
-
-## I think this job won't run anymore, after I add a workflow.  Just leaving it here for reference, and to confirm that.
 jobs:
-  shouldnt_run:
+  build:
     executor: java17
     steps:
       # todo - ssh keys?
