--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
   maven: circleci/maven@1.3.0
 
 jobs:
-  build:
+  maven_package:
     executor: java17
     steps:
       # todo - ssh keys?
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: Build with tests
           command: |
-            mvn clean install
+            mvn clean package
       - run:
           name: Save test results
           command: |
@@ -40,3 +40,8 @@ jobs:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
+
+workflows:
+  main:
+    jobs:
+      - maven_package
