QQQ-6 Adding mvn-settings and first attempt at mvn deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
     executor: java17
     steps:
       - run:
-          echo "i don't know how to github release..."
+          mvn -s .circleci/mvn-settings.xml deploy
 
 workflows:
   main:
