--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
   maven: circleci/maven@1.3.0
 
 jobs:
-  maven_package:
+  maven_package: ## delete this if maven/test works
     executor: java17
     steps:
       # todo - ssh keys?
@@ -46,12 +46,13 @@ jobs:
 workflows:
   main:
     jobs:
-      - maven_package
+      - maven/test:
+          executor: java17
       - github_release:
           context:
             - Production
           requires:
-            - maven_package
+            - maven/test
           filters:
             branches:
               only: circleci-project-setup ## todo - change to main
