--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,43 +8,15 @@ executors:
 orbs:
   maven: circleci/maven@1.3.0
 
-jobs:
-  maven_package: ## delete this if maven/test works
-    executor: java17
-    steps:
-      # todo - ssh keys?
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-      - run:
-          name: Build with tests
-          command: |
-            mvn clean package
-      - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-          when: always
-      - store_test_results:
-          path: ~/test-results
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-  github_release:
-    executor: java17
-    steps:
-      - maven/test:
-          executor: java17
-
 workflows:
   main:
     jobs:
+      ## Job (based on maven orb) to test the codebase.  Should run for all branches.  
       - maven/test:
           name: run_tests
           executor: java17
+
+      ## Job (based on maven orb) to do a mvn deploy to publish jar to github qqq-maven-registry
       - maven/test:
           name: deploy_to_github
           executor: java17
