--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
 
    <repositories>
       <repository>
-        <id>github</id>
+        <id>github-qqq-maven-registry</id>
         <name>GitHub QQQ Maven Registry</name>
         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
       </repository>
