Update versions to 0.0.0-SNAPSHOT (both this and its deps); add repository and distributionManagement

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
    <groupId>com.kingsrook.qqq</groupId>
    <artifactId>qqq-sample-project</artifactId>
-   <version>0.0-SNAPSHOT</version>
+   <version>0.0.0-SNAPSHOT</version>
 
    <properties>
       <!-- props specifically to this module -->
@@ -47,25 +47,25 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.0-SNAPSHOT</version>
+         <version>0.0.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.0-SNAPSHOT</version>
+         <version>0.0.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-javalin</artifactId>
-         <version>0.0-SNAPSHOT</version>
+         <version>0.0.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-picocli</artifactId>
-         <version>0.0-SNAPSHOT</version>
+         <version>0.0.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
 
@@ -153,5 +153,21 @@
          </plugin>
       </plugins>
    </build>
+
+   <repositories>
+      <repository>
+         <id>github-qqq-maven-registry</id>
+         <name>GitHub QQQ Maven Registry</name>
+         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
+      </repository>
+   </repositories>
+
+   <distributionManagement>
+      <repository>
+         <id>github-qqq-maven-registry</id>
+         <name>GitHub QQQ Maven Registry</name>
+         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
+      </repository>
+   </distributionManagement>
 
 </project>
