--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
          <version>5.8.1</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.assertj</groupId>
+         <artifactId>assertj-core</artifactId>
+         <version>3.23.1</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
