--- a/pom.xml
+++ b/pom.xml
@@ -61,21 +61,9 @@
          <version>1.12.243</version>
       </dependency>
       <dependency>
-         <groupId>org.testcontainers</groupId>
-         <artifactId>testcontainers</artifactId>
-         <version>1.17.2</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.testcontainers</groupId>
-         <artifactId>localstack</artifactId>
-         <version>1.17.2</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.testcontainers</groupId>
-         <artifactId>junit-jupiter</artifactId>
-         <version>1.17.2</version>
+         <groupId>cloud.localstack</groupId>
+         <artifactId>localstack-utils</artifactId>
+         <version>0.2.20</version>
          <scope>test</scope>
       </dependency>
 
