--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ executors:
 
 orbs:
   slack: circleci/slack@4.10.1
+  localstack: localstack/platform@1.0
 
 commands:
   run_maven:
@@ -41,6 +42,7 @@ jobs:
   mvn_test:
     executor: java17
     steps:
+      - localstack/startup
       - run_maven:
           maven_subcommand: test
       - slack/notify:
@@ -49,6 +51,7 @@ jobs:
   mvn_deploy:
     executor: java17
     steps:
+      - localstack/startup
       - run_maven:
           maven_subcommand: deploy
       - slack/notify:
