--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,12 @@ orbs:
   localstack: localstack/platform@1.0
 
 commands:
+  install_java17:
+    steps:
+      - run:
+          name: Install Java 17
+          command: |
+            sudo add-apt-repository -y ppa:openjdk-r/ppa && sudo apt install -y openjdk-17-jdk && sudo rm /etc/alternatives/java && sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /etc/alternatives/java
   run_maven:
     parameters:
       maven_subcommand:
@@ -43,6 +49,7 @@ jobs:
     executor: localstack/default
     steps:
       - localstack/startup
+      - install_java17
       - run_maven:
           maven_subcommand: test
       - slack/notify:
@@ -52,6 +59,7 @@ jobs:
     executor: localstack/default
     steps:
       - localstack/startup
+      - install_java17
       - run_maven:
           maven_subcommand: deploy
       - slack/notify:
