--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ commands:
       - run:
           name: Install Java 17
           command: |
-            sudo add-apt-repository -y ppa:openjdk-r/ppa && sudo apt install -y openjdk-17-jdk && sudo rm /etc/alternatives/java && sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /etc/alternatives/java
+            if [ ! -e "/usr/lib/jvm/java-17-openjdk-amd64" ]; then sudo add-apt-repository -y ppa:openjdk-r/ppa && sudo apt install -y openjdk-17-jdk fi
+            sudo rm /etc/alternatives/java && sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /etc/alternatives/java
   run_maven:
     parameters:
       maven_subcommand:
@@ -25,6 +26,8 @@ commands:
     steps:
       - checkout
       - restore_cache:
+          keys:
+            - usr-lib-jvm
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
       - run:
@@ -43,6 +46,10 @@ commands:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
+      - save_cache:
+          paths:
+            - /usr/lib/jvm/
+          key: usr-lib-jvm
 
 jobs:
   mvn_test:
