--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
          <artifactId>commons-csv</artifactId>
          <version>1.8</version>
       </dependency>
+      <dependency>
+         <groupId>org.assertj</groupId>
+         <artifactId>assertj-core</artifactId>
+         <version>3.23.1</version>
+         <scope>test</scope>
+      </dependency>
 
       <!-- Common deps for all qqq modules -->
       <dependency>
