--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.0.0-SNAPSHOT</version>
+         <version>0.0.0-20220628.161829-14</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.0.0-SNAPSHOT</version>
+         <version>0.0.0-20220628.170758-8</version>
          <scope>test</scope>
       </dependency>
 
