--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,17 @@
          <version>8.0.28</version>
       </dependency>
       <dependency>
+         <groupId>software.aws.rds</groupId>
+         <artifactId>aws-mysql-jdbc</artifactId>
+         <version>1.1.0</version>
+      </dependency>
+      <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>2.1.210</version>
          <scope>test</scope>
       </dependency>
+
 
       <!-- Common deps for all qqq modules -->
       <dependency>
