--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
    <groupId>com.kingsrook.qqq</groupId>
    <artifactId>qqq-sample-project</artifactId>
-   <version>0.0.0-SNAPSHOT</version>
+   <version>0.1.0-SNAPSHOT</version>
 
    <properties>
       <!-- props specifically to this module -->
@@ -47,25 +47,31 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.0.0-SNAPSHOT</version>
+         <version>0.1.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.0.0-SNAPSHOT</version>
+         <version>0.1.0-SNAPSHOT</version>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-backend-module-filesystem</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-javalin</artifactId>
-         <version>0.0.0-SNAPSHOT</version>
+         <version>0.1.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-picocli</artifactId>
-         <version>0.0.0-SNAPSHOT</version>
+         <version>0.1.0-SNAPSHOT</version>
          <scope>compile</scope>
       </dependency>
 
@@ -98,7 +104,19 @@
    <build>
       <plugins>
          <!-- plugins specifically for this module -->
-         <!-- none at this time -->
+         <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+               <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+               <archive>
+                  <manifest>
+                     <mainClass>com.kingsrook.sampleapp.SampleCli</mainClass>
+                  </manifest>
+               </archive>
+            </configuration>
+         </plugin>
 
          <!-- Common plugins for all qqq modules -->
          <plugin>
