Switching circleci to run verify instead of test; temp bumping required ratio to 99, to see a failure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     executor: java17
     steps:
       - run_maven:
-          maven_subcommand: test
+          maven_subcommand: verify
       - slack/notify:
           event: fail
 
