--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
    <groupId>com.kingsrook.qqq</groupId>
    <artifactId>qqq-middleware-javalin</artifactId>
-   <version>0.1.0-SNAPSHOT</version>
+   <version>0.1.0</version>
 
    <scm>
      <connection>scm:git:git@github.com:Kingsrook/qqq-middleware-javalin.git</connection>
