--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.1.0</version>
+         <version>0.2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.1.0</version>
+         <version>0.2.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
 
