--- a/pom.xml
+++ b/pom.xml
@@ -53,20 +53,20 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.1.0</version>
+         <version>0.2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.1.0</version>
+         <version>0.2.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
 
       <!-- 3rd party deps specifically for this module -->
       <dependency>
-          <groupId>info.picocli</groupId>
-          <artifactId>picocli</artifactId>
-          <version>4.6.1</version>
+         <groupId>info.picocli</groupId>
+         <artifactId>picocli</artifactId>
+         <version>4.6.1</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
