--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
       <module>qqq-backend-module-filesystem</module>
       <module>qqq-middleware-picocli</module>
       <module>qqq-middleware-javalin</module>
-      <!-- <module>qqq-sample-project</module> -->
+      <module>qqq-sample-project</module>
    </modules>
 
    <properties>
