Switching to use localstack executor, to get filesystem s3 tests running again
Revert "Moving the DisabledOnOs down to the subclasses, not the base class"
This reverts commit 715c6f36d0e335236da1a39f9b3cba1b6e0484d7.

--- a/qqq-backend-module-filesystem/pom.xml
+++ b/qqq-backend-module-filesystem/pom.xml
@@ -33,7 +33,7 @@
 
    <properties>
       <!-- props specifically to this module -->
-      <coverage.instructionCoveredRatioMinimum>0.60</coverage.instructionCoveredRatioMinimum>
+      <!-- none at this time -->
    </properties>
 
    <dependencies>
