--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,19 @@
 version: 2.1
 
-executors:
-  java17:
-    docker:
-      - image: 'cimg/openjdk:17.0'
-    resource_class: small
-
 orbs:
   slack: circleci/slack@4.10.1
+  localstack: localstack/platform@1.0
 
 commands:
+  install_java17:
+    steps:
+      - run:
+          name: Install Java 17
+          command: |
+            sudo add-apt-repository -y ppa:openjdk-r/ppa
+            sudo apt install -y openjdk-17-jdk
+            sudo rm /etc/alternatives/java
+            sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /etc/alternatives/java
   mvn_verify:
     steps:
       - checkout
@@ -21,7 +25,17 @@ commands:
           command: |
             mvn -s .circleci/mvn-settings.xml verify
       - store_artifacts:
-          path: "*/target/site/jacoco"
+          path: qqq-backend-core/target/site/jacoco
+      - store_artifacts:
+          path: qqq-backend-module-filesystem/target/site/jacoco
+      - store_artifacts:
+          path: qqq-backend-module-rdbms/target/site/jacoco
+      - store_artifacts:
+          path: qqq-middleware-javalin/target/site/jacoco
+      - store_artifacts:
+          path: qqq-middleware-picocli/target/site/jacoco
+      - store_artifacts:
+          path: qqq-sample-project/target/site/jacoco
       - run:
           name: Save test results
           command: |
@@ -52,14 +66,16 @@ commands:
 
 jobs:
   mvn_test:
-    executor: java17
+    executor: localstack/default
     steps:
+      - localstack/startup
+      - install_java17
       - mvn_verify
       - slack/notify:
           event: fail
 
   mvn_deploy:
-    executor: java17
+    executor: localstack/default
     steps:
       - mvn_verify
       - mvn_jar_deploy
