Missed adding localstack/startup and install_java17 to mvn_deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,8 @@ jobs:
   mvn_deploy:
     executor: localstack/default
     steps:
+      - localstack/startup
+      - install_java17
       - mvn_verify
       - mvn_jar_deploy
       - slack/notify:
